# chess-stats

./: .dockerignore  Cargo.toml  Dockerfile  TODO.md  completed_game_20041.json  completed_game_2022_10-jq.json  completed_game_2022_11.json  completed_game_2022_12.json  completed_game_2022_5.json  completed_games.json  player-schema.json  readme.md  whatever.txt  wtf.txt
chesscom/: Cargo.toml  completed_game_2022_4.json  completed_game_2022_8.json  completed_game_2022_9.json  completed_game_2023_2.json  games.json
chesscom/games/: completed_game_2022_7.json  completed_game_2023_1.json
chesscom/src/: csv_models.rs  games_source.rs  get_profile.rs  main.rs
chesscom/src/features/: game_opening.rs  group_openings.rs
chesscom/src/ml/: tree.rs
chesscom/src/models/: opening.rs
docs/: index.html
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
features/: decision_tree_example.dvi  decision_tree_example.fdb_latexmk  decision_tree_example.fls
games/: completed_game_2023_3.json
history/: Cargo.toml  completed_game_2022_10.json-broken  games_.json
history/games/: completed_game_2022_6.json
history/recent-games/: completed_game_2022_4.json
history/src/: engine.rs  features.rs  game_storage.rs  models.rs
history/src/features/: game_opening.rs  group_openings.rs  result.rs
history/src/games_source/: chess_com_source.rs
history/src/ml/: tree.rs
history/src/models/: opening.rs
openings/: Cargo.toml  lib.rs  readme.md
openings/src/: lib.rs  models.rs  trie.rs
pgn/: Cargo.toml
pgn/src/: lib.rs  models.rs  reader.rs
pgn/src/models/: headers.rs  move_counter.rs  pgn_moves.rs
recent-games/: completed_game_2023_4.json
src/: apis.rs  csv_models.rs  date_iter.rs  engine.rs  features.rs  game_storage.rs  main.rs  models.rs  string_util.rs  tree.rs
src/features/: game_opening.rs  group_openings.rs  username_colour.rs
src/ml/: tree.rs
ui/: Cargo.toml  Dioxus.toml  README.md
ui/.dioxus/web/: .rustc_info.json
ui/docs/assets/dioxus/: chess-ui.js
ui/src/: app.rs  board.rs  components.rs  convert.rs  engine.rs  eval.rs  game.rs  main.rs  moves.rs  route.rs
ui/src/assets/: board.css  drag-drop.css
ui/src/components/: black_bishop.rs  black_king.rs  black_knight.rs  black_pawn.rs  black_queen.rs  black_rook.rs  white_bishop.rs  white_king.rs  white_knight.rs  white_pawn.rs  white_queen.rs  white_rook.rs
ui/src/engine/: bnf_pgn.rs  fen.rs  pgn.rs  pgn_reader.rs  sample-broken-bnf-grammar.txt
