[package]
name = "chess-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chesscom-openapi = "0.1.1"
chrono = "0.4.23"
linfa = { version = "0.6.1", features = ["serde", "serde_crate"] }
linfa-trees = { version = "0.6.1", features = ["serde", "serde_crate"] }
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.155", features = ["serde_derive"] }
serde_derive = "1.0.155"
serde_json = "1.0.94"
serde_test = "1.0.155"
tokio = { version = "1.26.0", features = ["tokio-macros", "rt-multi-thread", "full", "macros"] }
