[package]
name = "chess-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chesscom-openapi = "0.1.1"
chrono = "0.4.23"
csv = "1.2.2"
futures = "0.3.28"
glob = "0.3.1"
lazy_static = "1.4.0"
linfa = { version = "0.6.1", features = ["serde", "serde_crate"] }
linfa-trees = { version = "0.6.1", features = ["serde", "serde_crate"] }
ndarray = "0.15.6"
pleco = "0.5.0"
pretty_assertions = "1.3.0"
regex = "1.7.1"
reqwest = "0.12.4"
serde = { version = "1.0.155", features = ["serde_derive"] }
serde_derive = "1.0.155"
serde_json = "1.0.94"
serde_test = "1.0.155"
tokio = { version = "1.26.0", features = ["tokio-macros", "rt-multi-thread", "full", "macros"] }
