[package]
name = "chess-openings"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.155", features = ["serde_derive"] }
serde_derive = "1.0.155"
serde_json = "1.0.94"
serde_test = "1.0.155"
chess-pgn = { path = "../pgn"}
trie-rs = { version = "0.4.2", features = ["serde"] }
