[package]
name = "chess-ui"
version = "0.1.0"
authors = ["Richard Fisk <richard.fisk@dabble.com.au>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-openings = { path = "../openings"}
chess-pgn = { path = "../pgn"}
# chess-history = { path = "../history"}
dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
shakmaty = "0.27.0"
pgn-reader = "0.26.0"
pgn_parser = "0.2.2"
timecat = { version = "1.28.3", default-features = false, features = ["engine", "wasm"] }
